app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: url-health-monitor
  name: app-deployment
  namespace: health-monitor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: url-health-monitor
  strategy: {}
  template:
    metadata:
      labels:
        app: url-health-monitor
    spec:
      containers:
      - image: tmatteo99/url-health-monitor:7dcdd238ad48fb3fb738b39d8088ffae1e935fc1
        name: url-health-monitor
        ports:
          - containerPort: 8080
      resources: {}
status: {}
