postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: postgres-deployment
  name: postgres-deployment
  namespace: health-monitor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres-deployment
  strategy: {}
  template:
    metadata:
      labels:
        app: postgres-deployment
    spec:
      containers:
      - image: postgres
        name: postgres-deployment
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: postgres-storage
          mountPath: /var/lib/postgresql
      volumes:
      - name: postgres-storage
        persistentVolumeClaim:
          claimName: postgres-pvc
      resources: {}
status: {}
