be-fe-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: be-fe-service
  name: be-fe-service
  namespace: health-monitor
spec:
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: url-health-monitor
  type: ClusterIP
status:
  loadBalancer: {}
