db-be-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: db-be-service
  name: db-be-service
  namespace: health-monitor
spec:
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  selector:
    app: postgres-deployment
  type: ClusterIP # <-- can be omitted
status:
  loadBalancer: {}
