service-to-ingress-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: service-to-ingress-service
  name: service-to-ingress-service
  namespace: health-monitor
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: app-fe-deployment
  type: ClusterIP
status:
  loadBalancer: {}
